fixed z-index

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -28,7 +28,7 @@
     z-index: 150;
   }
   &--999 {
-    z-index: 999;
+    z-index: 999 !important;
   }
 }
 
